--- a/KhTracker/MainWindow.xaml
+++ b/KhTracker/MainWindow.xaml
@@ -47,10 +47,11 @@
                 <MenuItem Header="Auto-Save Tracker Progress on Tracker Exit" Click="AutoSaveProgressToggle" x:Name="AutoSaveProgressOption" IsCheckable="True" IsChecked="True"/>
                 <MenuItem Header="Auto-Save Tracker Progress on Connection Loss" Click="AutoSaveProgress2Toggle" x:Name="AutoSaveProgress2Option" IsCheckable="True" IsChecked="True"/>
                 <Separator/>
-                <MenuItem Header="Reset Tracker" 	 Click="OnReset"/>
-                <MenuItem Header="Always on Top" 	 Click="TopMostToggle"  x:Name="TopMostOption"     IsCheckable="True" IsChecked="False"/>
-                <MenuItem Header="Drag and Drop" 	 Click="DragDropToggle" x:Name="DragAndDropOption" IsCheckable="True" IsChecked="True"/>
-                <MenuItem Header="Grid Tracker"      Click="GridWindow_Open"/>
+                <MenuItem Header="Reset Tracker" 	    Click="OnReset"/>
+                <MenuItem Header="Always on Top" 	    Click="TopMostToggle"  x:Name="TopMostOption"     IsCheckable="True" IsChecked="False"/>
+                <MenuItem Header="Drag and Drop" 	    Click="DragDropToggle" x:Name="DragAndDropOption" IsCheckable="True" IsChecked="True"/>
+                <MenuItem Header="Grid Tracker"         Click="GridWindow_Open"/>
+                <MenuItem Header="Objectives Tracker"   Click="objWindow_Open"/>
                 <Separator/>
                 <MenuItem Header="Reset Window Size" Click="ResetSize"/>
                 <MenuItem Header="Show Disconnect Message" Click="DisconnectToggle" x:Name="Disconnect" IsCheckable="True" IsChecked="True"/>
