--- a/KhTracker/MainDictionary.xaml
+++ b/KhTracker/MainDictionary.xaml
@@ -91,6 +91,16 @@
         <GradientStop Color="#FFADFFFF" Offset="0.4"/>
     </LinearGradientBrush>
 
+    <LinearGradientBrush x:Key="Banner_Gold" EndPoint="0.5,1" StartPoint="0.5,0">
+        <GradientStop Color="#FFEC8200" Offset="1"/>
+        <GradientStop Color="#FFFFDE00" Offset="0.4"/>
+    </LinearGradientBrush>
+
+    <LinearGradientBrush x:Key="Banner_Red" EndPoint="0.5,1" StartPoint="0.5,0">
+        <GradientStop Color="#FF7F2525" Offset="1"/>
+        <GradientStop Color="#FFFF4600" Offset="0.4"/>
+    </LinearGradientBrush>
+
     <!--Classic-->
     <SolidColorBrush x:Key="ClassicYellow" Color="#FFE500"/>
     <!--Hinted Hints-->
