objective tracker fixes - changed Ursula's Revenge and A New Day tracking to hopefully track on completion, not entering. - changed IDs used to check for all 4 OC cups tracking - edited UpdateSupportingTrackers to not pass certain boss info to objective tracker.

--- a/KhTracker/App.xaml
+++ b/KhTracker/App.xaml
@@ -16,6 +16,7 @@
                 <ResourceDictionary Source="WorldDictionary.xaml" />
                 <ResourceDictionary Source="ProgressionDictionary.xaml" />
                 <ResourceDictionary Source="GridDictionary.xaml" />
+                <ResourceDictionary Source="ObjectiveDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
