--- a/KhTracker/Windows/ObjectivesWindow.xaml
+++ b/KhTracker/Windows/ObjectivesWindow.xaml
@@ -41,6 +41,12 @@
             <MenuItem Header="Options" Focusable="False">
                 <MenuItem Header="Color Settings" Click="PickColor_Click" />
             </MenuItem>
+            <MenuItem Header="Image Visuals" Focusable="False">
+                <MenuItem Header="Simple Icon Style"  Click="ObjTelevoIconsToggle"     x:Name="ObjTelevoIconsOption"      IsCheckable="True" IsChecked="True"/>
+                <MenuItem Header="Game Icons Style"   Click="ObjSonicIconsToggle"      x:Name="ObjSonicIconsOption"       IsCheckable="True" IsChecked="False"/>
+                <MenuItem Header="Load Custom Icons"  Click="ObjCustomIconsToggle"     x:Name="ObjCustomIconsOption"      IsCheckable="True" IsChecked="False"/>
+            </MenuItem>
+            <Separator/>
             <!--MenuItem Header="Image Visuals" Focusable="False">
                 <MenuItem Header="Simple Icon Style"  Click="TelevoIconsToggle"     x:Name="TelevoIconsOption"      IsCheckable="True" IsChecked="True"/>
                 <MenuItem Header="Game Icons Style"   Click="SonicIconsToggle"      x:Name="SonicIconsOption"       IsCheckable="True" IsChecked="False"/>
